# pixfc-sse

./: BuildingPixFC.md  CMakeLists.txt  COPYING.onerivermedia  CREDITS  Changelog  ConversionTiming.md  GettingHelp.md  HowToUse.md  ProjectHome.md  README  SupportedPixelFormats.md  TODO  argb_conversion_common.h  cleanup.bat  cleanup.sh  common.c  common.h  conversion_blocks.c  conversion_blocks.h  conversion_routines_common.h  conversion_routines_from_argb.c  conversion_routines_from_argb.h  conversion_routines_from_argb_bt601.c  conversion_routines_from_argb_bt709.c  conversion_routines_from_bgr24.c  conversion_routines_from_bgr24.h  conversion_routines_from_bgr24_bt601.c  conversion_routines_from_bgr24_bt709.c  conversion_routines_from_bgra.c  conversion_routines_from_bgra.h  conversion_routines_from_bgra_bt601.c  conversion_routines_from_bgra_bt709.c  conversion_routines_from_rgb24.c  conversion_routines_from_rgb24_bt601.c  conversion_routines_from_rgb24_bt709.c  conversion_routines_from_uyvy.c  conversion_routines_from_uyvy.h  conversion_routines_from_uyvy_bt601.c  conversion_routines_from_uyvy_bt709.c  conversion_routines_from_yuyv.c  (+29 more)
cmake/: DetectPlatform.cmake  DetectTarget.cmake  Toolchain-darwin-x86_64-clang.cmake  Toolchain-darwin-x86_64-gcc.cmake  Toolchain-linux-armel7v-gcc.cmake  Toolchain-linux-beagleboard_xm-hf-gcc.cmake  Toolchain-linux-rpi-gcc.cmake  Toolchain-linux-rpi-hard-fl-vfp-gcc.cmake  Toolchain-linux-rpi-hf-gcc.cmake  Toolchain-linux-rpi-soft-fl-vfp-gcc.cmake  Toolchain-linux-x86-clang.cmake  Toolchain-linux-x86-distcc.cmake  Toolchain-linux-x86-gcc.cmake  Toolchain-linux-x86_64-clang.cmake  Toolchain-linux-x86_64-distcc.cmake  Toolchain-linux-x86_64-gcc.cmake
include/: pixfc-sse.h
include/common/: platform_util.h
include/win/: stdint.h
perf-results/: i5-details.txt  i5-linux.txt  i5-win7.txt  xeon-details.txt  xeon-linux.txt  xeon-osx.txt
src/: CMakeLists.txt  argb_conversion_common.h  common.c  common.h  conversion_blocks.c  conversion_blocks.h  conversion_routines_from_argb.c  conversion_routines_from_argb.h  conversion_routines_from_argb_bt601.c  conversion_routines_from_argb_bt709.c  conversion_routines_from_argb_scalar.c  conversion_routines_from_bgr24.c  conversion_routines_from_bgr24.h  conversion_routines_from_bgr24_bt601.c  conversion_routines_from_bgr24_bt709.c  conversion_routines_from_bgra.c  conversion_routines_from_bgra.h  conversion_routines_from_bgra_bt601.c  conversion_routines_from_bgra_bt709.c  conversion_routines_from_r10k.c  conversion_routines_from_r10k.h  conversion_routines_from_r10k_bt601.c  conversion_routines_from_r10k_bt709.c  conversion_routines_from_r210.c  conversion_routines_from_r210.h  conversion_routines_from_r210_bt601.c  conversion_routines_from_r210_bt709.c  conversion_routines_from_r210_scalar.c  conversion_routines_from_rgb24.c  conversion_routines_from_rgb24.h  conversion_routines_from_rgb24_bt601.c  conversion_routines_from_rgb24_bt709.c  conversion_routines_from_uyvy.c  conversion_routines_from_uyvy.h  conversion_routines_from_uyvy_bt601.c  conversion_routines_from_uyvy_bt709.c  conversion_routines_from_v210.c  conversion_routines_from_v210.h  conversion_routines_from_v210_bt601.c  conversion_routines_from_v210_bt709.c  (+30 more)
src/inline-unit-test/: CMakeLists.txt  inline-testing-common.h  inline-unit-test.c  rgb_downsample.c  rgb_unpack.c  yuv_pack.c
test-images/: 1280x1024.yuv420p  1280x1024.yuv422p  1280x1024.yuyv  1280x720.uyvy  16x1-2Red2Green2Blue2WhiteX2.yuyv  1920x1080.uyvy
tools/: CMakeLists.txt  compare_instr_count.sh  compare_timings.py  convert-to-file.c  convert-yuyv-png.sh  count_instr.sh  pixfmt_descriptions.h  rgb_image.h  rm-converted-files.sh  test-utils.c  test-utils.h  time_conversions.c  unit-testing.c  validate-output.c  visual-check.c  yuv422p_to_yuyv.c  yuyv_to_yuv420p.c  yuyv_to_yuv422p.c
tools/inline-unit-test/: CMakeLists.txt  inline-testing-common.c  inline-testing-common.h  inline-unit-test.c  rgb_pack.c  rgb_to_yuv_convert.c  rgb_unpack.c  yuv_pack.c  yuv_repack.c  yuv_to_rgb_convert.c  yuv_unpack.c  yuv_upsample.c
tools/scripts/: convert-all-yuv.sh  convert-yuyv-png.sh
